--- a/MMSite6/MMSite6.csproj
+++ b/MMSite6/MMSite6.csproj
@@ -1,24 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
-    <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+    <TargetFramework>netcoreapp5.0</TargetFramework>
     <UserSecretsId>3e5db529-bedf-487b-a64d-245d776f042a</UserSecretsId>
   </PropertyGroup>
 
-
+<!-- 
   <ItemGroup>
-    <PackageReference Include="bootstrap" Version="4.3.1" />
-    <PackageReference Include="EntityFramework" Version="6.3.0-preview9-19423-04" />
-    <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.AspNetCore.AzureKeyVault.HostingStartup" Version="2.0.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Azure.Storage.Blob" Version="11.1.0" />
-    <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
-    <PackageReference Include="Sendgrid" Version="9.12.0" />
-  </ItemGroup>
+    <FrameworkReference Include="bootstrap" Version="4.3.1" />
+    <FrameworkReference Include="EntityFramework" Version="6.3.0-preview9-19423-04" />
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+    <FrameworkReference Include="Microsoft.AspNetCore.AzureKeyVault.HostingStartup" Version="2.0.2" />
+    <FrameworkReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <FrameworkReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
+    <FrameworkReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
+    <FrameworkReference Include="Microsoft.Azure.Storage.Blob" Version="11.1.0" />
+    <FrameworkReference Include="WindowsAzure.Storage" Version="9.3.3" />
+    <FrameworkReference Include="Sendgrid" Version="9.12.0" />
+  </ItemGroup> -->
 
 
   <ItemGroup>
